--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about" data-block="about">
+<section id="about" class="about" data-block="about">
   <div class="container">
     <h2 class="section__title">Почему именно я</h2>
 
