--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -1,4 +1,4 @@
-<section class="pricing" data-block="pricing">
+<section id="price" class="pricing" data-block="pricing">
   <div class="container">
     <h2 class="section__title">Стоимость и форматы</h2>
 
