--- a/layouts/partials/process.html
+++ b/layouts/partials/process.html
@@ -1,4 +1,4 @@
-<section class="process" data-block="process">
+<section id="format" class="process" data-block="process">
   <div class="container">
     <h2 class="section__title">Как проходит работа</h2>
 
