--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -17,8 +17,8 @@
           <p>Меня зовут Ксения, я клинический и кризисный психолог, психотерапевт с большим опытом работы с тревожными
             расстройствами.</p>
 
-          <p>Специализируюсь на когнитивно-поведенческой терапии (КПТ) — методе с доказанной эффективностью 85% при
-            лечении тревоги и панических атак, а также синтон-подходе и нейрокогнитивном переобучении. Мои клиенты
+          <p>Специализируюсь на когнитивно-поведенческой терапии (КПТ) — научно обоснованном методе работы с
+            тревогой и паническими атаками, а также синтон-подходе и нейрокогнитивном переобучении. Мои клиенты
             отмечают значительное снижение тревоги после курса терапии. Помогла более 200 клиентам вернуть контроль над
             своей жизнью.</p>
 
