--- a/layouts/partials/benefits.html
+++ b/layouts/partials/benefits.html
@@ -38,7 +38,7 @@
         <strong>Метод: КПТ</strong><br>(когнитивно-поведенческая терапия)
       </div>
       <p class="method-description">
-        Доказанная эффективность в лечении тревожных расстройств.
+        Доказанная эффективность в работе с тревожными расстройствами.
         <strong>8 из 10 клиентов</strong> достигают значительного улучшения за 8-12 сессий.
       </p>
     </div>
