--- a/layouts/partials/floating-nav.html
+++ b/layouts/partials/floating-nav.html
@@ -27,7 +27,7 @@
        data-position="floating-nav"
        data-target="about">
       <span class="floating-nav__item-title">Обо мне и методе</span>
-      <span class="floating-nav__item-desc">Узнайте больше о моей квалификации, опыте и подходе к терапии</span>
+      <span class="floating-nav__item-desc">Узнайте больше о моей квалификации, опыте и подходе к работе</span>
     </a>
 
     <a href="#format"
