--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -72,7 +72,7 @@
         <li><strong>Конфиденциальность:</strong> Все разговоры остаются между нами. Я не записываю сессии без вашего
           разрешения.</li>
         <li><strong>* Гарантия:</strong> Если после 5 сессий вы не видите улучшений и выполняли домашние задания,
-          возвращаю 50% стоимости пакета.</li>
+          возвращаю часть стоимости пакета.</li>
       </ul>
     </div>
 
