--- a/layouts/partials/benefits.html
+++ b/layouts/partials/benefits.html
@@ -13,8 +13,8 @@
 
       <div class="benefit-card">
         <div class="benefit-card__number">✓</div>
-        <h3 class="benefit-card__title">Контроль над паническими атаками</h3>
-        <p class="benefit-card__description">Приступы паники либо прекращаются полностью, либо становятся редкими и
+        <h3 class="benefit-card__title">Контроль над приступами тревоги</h3>
+        <p class="benefit-card__description">Приступы либо прекращаются полностью, либо становятся редкими и
           управляемыми. Вы знаете, как справляться с симптомами.</p>
       </div>
 
