--- a/layouts/partials/quiz.html
+++ b/layouts/partials/quiz.html
@@ -14,7 +14,7 @@
         <h3 class="quiz__question-text">С чем вы хотели бы разобраться?</h3>
         <div class="quiz__answers">
           <button class="quiz__answer" data-answer="anxiety">Тревожность</button>
-          <button class="quiz__answer" data-answer="panic">Панические атаки</button>
+          <button class="quiz__answer" data-answer="panic">Приступы тревоги</button>
           <button class="quiz__answer" data-answer="stress">Стресс и выгорание</button>
           <button class="quiz__answer" data-answer="ocd">Навязчивые мысли (ОКР)</button>
           <button class="quiz__answer" data-answer="other">Другое</button>
